@@ -10,7 +10,7 @@ export(anova.gam, bam, bam.update,bandchol, betar,
        gam2objective,
        gamm, gam.check, gam.control,gam.fit3,
        gam.fit,gam.fit5.post.proc,
-       gamlss.etamu,gamlss.gH,
+       gamlss.etamu,gamlss.gH,gammals,
        gam.outer,gam.reparam, gam.vcomp, gamSim , 
        gaulss,gam.side,get.var,gevlss,ginla,
        influence.gam, 
