@@ -418,6 +418,7 @@ gaulss <- function(link=list("identity","logb"),b=0.01) {
       if (type=="response") return(rsd) else
       return((rsd*object$fitted[,2])) ## (y-mu)/sigma 
     }
+    
   postproc <- expression({
     ## code to evaluate in estimate.gam, to evaluate null deviance
     ## in principle the following seems reasonable, but because no
@@ -521,7 +522,6 @@ gaulss <- function(link=list("identity","logb"),b=0.01) {
       use.unscaled <- if (!is.null(attr(E,"use.unscaled"))) TRUE else FALSE
       if (is.null(start)) {
         jj <- attr(x,"lpi")
-	#offs <- attr(x,"offset")
 	if (!is.null(offset)) offset[[3]] <- 0
         yt1 <- if (family$link[[1]]=="identity") y else 
                family$linfo[[1]]$linkfun(abs(y)+max(y)*1e-7)
@@ -1951,3 +1951,304 @@ twlss <- function(link=list("log","identity","identity"),a=1.01,b=1.99) {
     available.derivs = 0 ## no higher derivs
     ),class = c("general.family","extended.family","family"))
 } ## end twlss
+
+
+lb.linkfun <- function(mu,b=-7) {
+## lower bound link function - see gammals for related routines. 
+  eta <- mub <- mu-b
+  ii <- mub < .Machine$double.eps
+  if (any(ii)) eta[ii] <- log(.Machine$double.eps)
+  jj <- mub > -log(.Machine$double.eps)
+  if (any(jj)) eta[jj] <- mub[jj]
+  jj <- !jj & !ii
+  if (any(jj)) eta[jj] <- log(exp(mub[jj])-1)
+  eta
+} ## lb.linkfun
+
+
+gammals <- function(link=list("identity","log"),b=-7) {
+## General family for gamma location scale model...
+## parameterization is in terms of log mean and log scale.
+## so log(mu) is mu1, scale = log(sigma) is mu2
+## 1. get derivatives wrt mu, rho and xi.
+## 2. get required link derivatives and tri indices.
+## 3. transform derivs to derivs wrt eta (gamlss.etamu).
+## 4. get the grad and Hessian etc for the model
+##    via a call to gamlss.gH  
+  
+  ## first deal with links and their derivatives...
+  if (length(link)!=2) stop("gammals requires 2 links specified as character strings")
+  okLinks <- list(c("identity"),c("identity","log"))
+  stats <- list()
+  for (i in 1:2) {
+    if (link[[i]] %in% okLinks[[i]]) stats[[i]] <- make.link(link[[i]]) else 
+    stop(link[[i]]," link not available for mu parameter of gammals")
+    fam <- structure(list(link=link[[i]],canonical="none",linkfun=stats[[i]]$linkfun,
+           mu.eta=stats[[i]]$mu.eta),
+           class="family")
+    fam <- fix.family.link(fam)
+    stats[[i]]$d2link <- fam$d2link
+    stats[[i]]$d3link <- fam$d3link
+    stats[[i]]$d4link <- fam$d4link
+  }
+  if (link[[2]]=="log") { ## g^{-1}(eta) = b + log(1+exp(eta)) link
+    stats[[2]]$valideta <- function(eta) TRUE
+    stats[[2]]$linkfun <- eval(parse(text=paste("function(mu,b=",b,") {\n eta <- mub <- mu-b;\n",
+      "ii <- mub < .Machine$double.eps;\n if (any(ii)) eta[ii] <- log(.Machine$double.eps);\n",
+      "jj <- mub > -log(.Machine$double.eps);if (any(jj)) eta[jj] <- mub[jj];\n",
+      "jj <- !jj & !ii;if (any(jj)) eta[jj] <- log(exp(mub[jj])-1);eta }")))
+
+    stats[[2]]$mu.eta <- eval(parse(text=paste("function(eta,b=",b,") {\n",
+      "ii <- eta < 0;eta <- exp(-eta*sign(eta))\n",
+      "if (any(ii)) { ei <- eta[ii];eta[ii] <- ei/(1+ei)}\n",
+      "ii <- !ii;if (any(ii)) eta[ii] <- 1/(1+eta[ii])\n",
+      "eta }\n")))
+
+    stats[[2]]$linkinv <- eval(parse(text=paste("function(eta,b=",b,") {\n",
+      "mu <- eta;ii <- eta > -log(.Machine$double.eps)\n",
+      "if (any(ii)) mu[ii] <- b + eta[ii]\n",
+      "ii <- !ii;if (any(ii)) mu[ii] <- b + log(1 + exp(eta[ii]))\n",
+      "mu }\n")))
+
+    stats[[2]]$d2link <- eval(parse(text=paste("function(eta,b=",b,") {\n",
+      "eta <- lb.linkfun(mu,b=b); ii <- eta > 0\n",
+      "eta <- exp(-eta*sign(eta))\n",
+      "if (any(ii)) { ei <- eta[ii];eta[ii] <- -(ei^2 + ei) }\n",
+      "ii <- !ii;if (any(ii)) { ei <- eta[ii];eta[ii] <- -(1+ei)/ei^2 }\n",
+      "eta }\n")))
+
+    stats[[2]]$d3link <- eval(parse(text=paste("function(eta,b=",b,") {\n",
+      "eta <- lb.linkfun(mu,b=b);ii <- eta > 0\n",
+      "eta <- exp(-eta*sign(eta))\n",
+      "if (any(ii)) { ei <- eta[ii]; eta[ii] <- (2*ei^2+ei)*(ei+1) }\n",
+      "ii <- !ii;if (any(ii)) { ei <- eta[ii]; eta[ii] <- (2+ei)*(1+ei)/ei^3 }\n",
+      "eta }\n")))
+    
+    stats[[2]]$d4link <- eval(parse(text=paste("function(eta,b=",b,") {\n",
+      "eta <- lb.linkfun(mu,b=b);ii <- eta > 0\n",
+      "eta <- exp(-eta*sign(eta))\n",
+      "if (any(ii)) { ei <- eta[ii];eta[ii] <- -(6*ei^3+6*ei^2+ei)*(ei+1) }\n",
+      "ii <- !ii;if (any(ii)) { ei <- eta[ii]; eta[ii] <- -(6+6*ei+ei^2)*(1+ei)/ei^4 }\n",
+      "eta }\n")))
+  }
+
+  residuals <- function(object,type=c("deviance","pearson","response")) {
+      mu <- object$fitted.values[,1]
+      rho <- object$fitted.values[,2]
+      y <- object$y
+      type <- match.arg(type)
+      if (type=="deviance") {
+        rsd <- 2*((y-mu)/mu-log(y/mu))*exp(-rho)
+        rsd <- sqrt(pmax(0,rsd))*sign(y-mu)
+      } else if (type=="pearson") {
+        (y-mu)/(exp(rho)*mu)
+      } else {
+        rsd <- y-fv
+      }
+      rsd
+    }
+    
+  postproc <- expression({
+    ## code to evaluate in estimate.gam, to evaluate null deviance
+    ## It's difficult to define a sensible version of this that ensures
+    ## that the data fall in the support of the null model, whilst being
+    ## somehow equivalent to the full fit
+    object$fitted.values[,1] <- exp(object$fitted.values[,1])
+    .my <- mean(object$y)
+    object$null.deviance <- sum(((y-.my)/.my-log(y/.my))*exp(-object$fitted.values[,2]))*2
+  })
+
+  ll <- function(y,X,coef,wt,family,offset=NULL,deriv=0,d1b=0,d2b=0,Hp=NULL,rank=0,fh=NULL,D=NULL) {
+  ## function defining the gamlss GEV model log lik. 
+  ## deriv: 0 - eval
+  ##        1 - grad and Hess
+  ##        2 - diagonal of first deriv of Hess
+  ##        3 - first deriv of Hess
+  ##        4 - everything.
+    jj <- attr(X,"lpi") ## extract linear predictor index
+    eta <- X[,jj[[1]],drop=FALSE]%*%coef[jj[[1]]] ## log mu
+    mu <- family$linfo[[1]]$linkinv(eta) ## mean
+    etat <- X[,jj[[2]],drop=FALSE]%*%coef[jj[[2]]] ## log sigma
+    th <- family$linfo[[2]]$linkinv(etat) ## log sigma
+
+    eth <- exp(-th) ## 1/exp1^th;
+    logy <- log(y);
+    ethmu <- exp(-th-mu)
+    ethmuy <- ethmu*y
+    etlymt <- eth*(logy-mu-th)
+    n <- length(y)
+
+    l  <-  sum(etlymt-logy-ethmuy-lgamma(eth)) ## l
+
+    if (deriv>0) {
+      l1 <- matrix(0,n,2)
+     
+      l1[,1]  <- ethmuy-eth ## lm
+      digeth <- digamma(eth)
+      l1[,2]  <- -etlymt+ethmuy+eth*digeth-eth; ## lt 
+
+      ## the second derivatives
+    
+      l2 <- matrix(0,n,3)
+      ## order mm,mt,tt
+     
+      l2[,1]  <- -ethmuy; ## lmm
+      l2[,2]  <-  eth-ethmuy; ## lmt
+      eth2 <- eth^2;treth <- trigamma(eth)
+      l2[,3]  <- etlymt-ethmuy-treth*eth2-eth*digeth+2*eth; #ltt
+      ## need some link derivatives for derivative transform
+      ig1 <- cbind(family$linfo[[1]]$mu.eta(eta),family$linfo[[2]]$mu.eta(etat))
+      g2 <- cbind(family$linfo[[1]]$d2link(mu),family$linfo[[2]]$d2link(th))
+    }
+
+    l3 <- l4 <- g3 <- g4 <- 0 ## defaults
+
+    if (deriv>1) {
+      ## the third derivatives
+      ## order mmm,mmt,mtt,ttt
+      l3 <- matrix(0,n,4)
+      l3[,1] <- ethmuy; ## lmmm
+      l3[,2] <- ethmuy; ## lmmt
+      l3[,3] <- ethmuy-eth; ## lmtt
+      eth3 <- eth2*eth; g3eth <- psigamma(eth,deriv=2)
+      l3[,4] <- -etlymt+ethmuy+g3eth*eth3+3*treth*eth2+eth*digeth-3*eth; ## lttt
+      g3 <- cbind(family$linfo[[1]]$d3link(mu),family$linfo[[2]]$d3link(th))
+    }
+
+    if (deriv>3) {
+      ## the fourth derivatives
+      ## order mmmm,mmmt,mmtt,mttt,tttt
+      l4 <- matrix(0,n,5)
+      l4[,1] <- -ethmuy; ## lmmmm
+      l4[,2] <- -ethmuy; ## lmmmt
+      l4[,3] <- -ethmuy; ## lmmtt
+      l4[,4] <-  eth-ethmuy; ## lmttt
+      eth4 <- eth3*eth
+      l4[,5] <- etlymt-ethmuy-psigamma(eth,deriv=3)*eth4-6*g3eth*eth3-
+                7*treth*eth2-eth*digeth+4*eth; ## ltttt 
+      g4 <- cbind(family$linfo[[1]]$d4link(mu),family$linfo[[2]]$d4link(th))
+    }
+
+    if (deriv) {
+      i2 <- family$tri$i2; i3 <- family$tri$i3
+      i4 <- family$tri$i4
+   
+      ## transform derivates w.r.t. mu to derivatives w.r.t. eta...
+      de <- mgcv:::gamlss.etamu(l1,l2,l3,l4,ig1,g2,g3,g4,i2,i3,i4,deriv-1)
+
+      ## get the gradient and Hessian...
+      ret <- mgcv:::gamlss.gH(X,jj,de$l1,de$l2,i2,l3=de$l3,i3=i3,l4=de$l4,i4=i4,
+                      d1b=d1b,d2b=d2b,deriv=deriv-1,fh=fh,D=D) 
+    } else ret <- list()
+    ret$l <- l; ret
+  } ## end ll gammals
+
+  initialize <- expression({
+  ## regress X[,[jj[[1]]] on log(y) then X[,jj[[2]]] on log abs
+  ## raw residuals.
+  ## note that appropriate E scaling
+  ## for full calculation may be inappropriate for initialization 
+  ## which is basically penalizing something different here.
+  ## best we can do here is to use E only as a regularizer.
+      n <- rep(1, nobs)
+      ## should E be used unscaled or not?..
+      use.unscaled <- if (!is.null(attr(E,"use.unscaled"))) TRUE else FALSE
+      if (is.null(start)) {
+        jj <- attr(x,"lpi")
+	if (!is.null(offset)) offset[[3]] <- 0
+        yt1 <- log(y+max(y)*.Machine$double.eps^.75)
+	if (!is.null(offset[[1]])) yt1 <- yt1 - offset[[1]]
+        if (is.list(x)) { ## discrete case
+	  start <- rep(0,max(unlist(jj)))
+	  R <- chol(mgcv:::XWXd(x$Xd,w=rep(1,length(y)),k=x$kd,ks=x$ks,ts=x$ts,dt=x$dt,v=x$v,
+	            qc=x$qc,nthreads=1,drop=x$drop,lt=x$lpid[[1]])+crossprod(E[,jj[[1]]]),pivot=TRUE)
+	  Xty <- mgcv:::XWyd(x$Xd,rep(1,length(y)),yt1,x$kd,x$ks,x$ts,x$dt,x$v,x$qc,x$drop,lt=x$lpid[[1]])
+          piv <- attr(R,"pivot")
+	  startji <- rep(0,ncol(R))
+          startji[piv] <- backsolve(R,forwardsolve(t(R),Xty[piv]))
+	  startji[!is.finite(startji)] <- 0
+	  start[jj[[1]]] <- startji
+	  eta1 <- mgcv:::Xbd(x$Xd,start,k=x$kd,ks=x$ks,ts=x$ts,dt=x$dt,v=x$v,qc=x$qc,drop=x$drop,lt=x$lpid[[1]])
+	  lres1 <- log(abs(y-family$linfo[[1]]$linkinv(eta1)))
+	  if (!is.null(offset[[2]])) lres1 <- lres1 - offset[[2]]
+	  R <- chol(mgcv:::XWXd(x$Xd,w=rep(1,length(y)),k=x$kd,ks=x$ks,ts=x$ts,dt=x$dt,v=x$v,
+	            qc=x$qc,nthreads=1,drop=x$drop,lt=x$lpid[[2]])+crossprod(E[,jj[[2]]]),pivot=TRUE)
+	  Xty <- mgcv:::XWyd(x$Xd,rep(1,length(y)),lres1,x$kd,x$ks,x$ts,x$dt,x$v,x$qc,x$drop,lt=x$lpid[[2]])
+	  startji <- piv <- attr(R,"pivot")
+	  startji[piv] <- backsolve(R,forwardsolve(t(R),Xty[piv]))
+          start[jj[[2]]] <- startji
+        } else { ## regular case
+	  start <- rep(0,ncol(x))
+	  x1 <- x[,jj[[1]],drop=FALSE]
+          e1 <- E[,jj[[1]],drop=FALSE] ## square root of total penalty
+          if (use.unscaled) {
+            qrx <- qr(rbind(x1,e1))
+            x1 <- rbind(x1,e1)
+            startji <- qr.coef(qr(x1),c(yt1,rep(0,nrow(E))))
+            startji[!is.finite(startji)] <- 0       
+          } else startji <- pen.reg(x1,e1,yt1)
+          start[jj[[1]]] <- startji
+          lres1 <- log(abs(y-family$linfo[[1]]$linkinv(x[,jj[[1]],drop=FALSE]%*%start[jj[[1]]])))
+	  if (!is.null(offset[[2]])) lres1 <- lres1 - offset[[2]]
+          x1 <-  x[,jj[[2]],drop=FALSE];e1 <- E[,jj[[2]],drop=FALSE]
+          if (use.unscaled) {
+            x1 <- rbind(x1,e1)
+            startji <- qr.coef(qr(x1),c(lres1,rep(0,nrow(E))))   
+            startji[!is.finite(startji)] <- 0
+          } else startji <- pen.reg(x1,e1,lres1)
+          start[jj[[2]]] <- startji
+	}  
+      }
+  }) ## initialize gammals
+
+  rd <- function(mu,wt,scale) {
+    ## simulate responses
+    scale <- exp(mu[,2])
+    rgamma(nrow(mu),shape=1/scale,scale=mu[,1]*scale)
+  } ## rd
+
+  predict <- function(family,se=FALSE,eta=NULL,y=NULL,X=NULL,
+                beta=NULL,off=NULL,Vb=NULL) {
+  ## optional function to give predicted values - idea is that 
+  ## predict.gam(...,type="response") will use this, and that
+  ## either eta will be provided, or {X, beta, off, Vb}. family$data
+  ## contains any family specific extra information. 
+  ## if se = FALSE returns one item list containing matrix otherwise 
+  ## list of two matrices "fit" and "se.fit"... 
+
+    if (is.null(eta)) { 
+      lpi <- attr(X,"lpi") 
+      if (is.null(lpi)) {
+        lpi <- list(1:ncol(X))
+      } 
+      eta <- matrix(0,nrow(X),2)
+      ve <- matrix(0,nrow(X),2) ## variance of eta 
+      for (i in 1:2) { 
+        Xi <- X[,lpi[[i]],drop=FALSE]
+        eta[,i] <- Xi%*%beta[lpi[[i]]] ## ith linear predictor
+	if (!is.null(off[[i]])) eta[,i] <- eta[,i] + off[[i]]
+        if (se) ve[,i] <- drop(pmax(0,rowSums((Xi%*%Vb[lpi[[i]],lpi[[i]]])*Xi)))
+      }
+    } else { 
+      se <- FALSE
+    }
+    gamma <- cbind(exp(eta[,1]),family$linfo[[2]]$linkinv(eta[,2]))
+   
+    if (se) { ## need to loop to find se of probabilities...
+      vp <- gamma
+      vp[,1] <- abs(gamma[,1])*sqrt(ve[,1])
+      vp[,2] <- abs(family$linfo[[2]]$mu.eta(eta[,2]))*sqrt(ve[2])
+      return(list(fit=gamma,se.fit=vp))
+    } ## if se
+    list(fit=gamma)
+  } ## gammals predict
+
+  structure(list(family="gammals",ll=ll,link=paste(link),nlp=2,
+    tri = mgcv:::trind.generator(2), ## symmetric indices for accessing derivative arrays
+    initialize=initialize,postproc=postproc,residuals=residuals,
+    linfo = stats,rd=rd,predict=predict, ## link information list
+    d2link=1,d3link=1,d4link=1, ## signals to fix.family.link that all done    
+    ls=1, ## signals that ls not needed here
+    available.derivs = 2 ## can use full Newton here
+    ),class = c("general.family","extended.family","family"))
+} ## end gammals
